infra/k8s/10-rps-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rps-app
  namespace: mlops-poc
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rps-app
  template:
    metadata:
      labels:
        app: rps-app
    spec:
      containers:
        - name: app
          image: ghcr.io/jimmyrisk/rps-app:latest
          imagePullPolicy: Always
          args:
            - uvicorn
            - app.main:app
            - --host
            - 0.0.0.0
            - --port
            - "8080"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 1536Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
            - name: model-storage
              mountPath: /data/models
              readOnly: true
            - name: prometheus-tmp
              mountPath: /tmp/prometheus
        
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: model-storage
          persistentVolumeClaim:
            claimName: rps-models-pvc
            readOnly: true
        - name: prometheus-tmp
          emptyDir: {}
